test/ui/tests/parsing/unterminated-pi-type-literal.stderr
error[E010]: found keyword `of` but expected `->`
 --> ${DIRECTORY}/parsing/unterminated-pi-type-literal.lushui:3:19
  |
3 | data X (A: Type): (m: M) of
  |                   ------ start of a pi type literal
  |
 --> ${DIRECTORY}/parsing/unterminated-pi-type-literal.lushui:3:26
  |
3 | data X (A: Type): (m: M) of
  |                          ^^ unexpected token
  |

error: aborting due to previous error
 note: the error E010 has a detailed explanation
 help: run `lushui explain E010` to view it

